@@ -10,6 +10,8 @@
 	* src/formats/smilesformat.cpp: Add initial pass at "standard"
 	SMILES labels.
 
+	* Doxygen, include/*.h, src/*.cpp: Update doxygen documentation.
+
 2008-06-07  Chris Morley
 
 	* src/formats/fingerprintformat.cpp: correct folding error message
